new footer links, updated modals, fixed broken links

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ So it will be a one page, website?
             <div class="col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about">About</h2>
-                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, click here. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
+                <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
                     <a href="https://www.linkedin.com/in/colemanning/"><i class="fab fa-linkedin-in mx-sm-3"></i></a>
@@ -202,8 +202,7 @@ So it will be a one page, website?
                     <div class="card-body">
                         <h5 class="card-title">Title</h5>
                         <h6 class="card-subtitle text-muted mb-2">date</h6>
-                        <p class="card-text">description.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <a class="btn btn-primary" data-toggle="modal" data-target="#fillerModal">Details</a>
                     </div>
                 </div>
@@ -211,9 +210,10 @@ So it will be a one page, website?
                 <div class="card m-2" style="width: 18rem;">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
                     <div class="card-body">
-                        <h5 class="card-title">Parkerprojects.info</h5>
-                        <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
-                        <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                        <h5 class="card-title">Title</h5>
+                        <h6 class="card-subtitle text-muted mb-2">date</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="card-text"><small class="text-muted">Bottom Text Option</small></p>
                         <a class="btn btn-primary" data-toggle="modal" data-target="#fillerModal">Details</a>
                     </div>
                 </div>
@@ -228,8 +228,8 @@ So it will be a one page, website?
                             <h5 class="card-title">Mumble Image Resizer</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Java | 2020</h6>
                             <p class="card-text">Resizes images to a certain length in Base64, and copies Mumble readable code to clipboard so that they can be sent over Mumble servers with small filesize limits.</p>
-                            <a href="#" class="card-link">source</a>
-                            <a href="#" class="card-link">download</a>
+                            <a href="#todo" class="card-link">source</a>
+                            <a href="#todo" class="card-link">download</a>
                         </div>
                     </div>
                 </div>
@@ -239,8 +239,8 @@ So it will be a one page, website?
                             <h5 class="card-title">Computronics tape-util</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft) | 2020</h6>
                             <p class="card-text">A group of Utilities for tapes in the Minecraft mod, Computronics.</p>
-                            <a href="#" class="card-link">source</a>
-                            <a href="#" class="card-link">download</a>
+                            <a href="#todo" class="card-link">source</a>
+                            <a href="#todo" class="card-link">download</a>
                         </div>
                     </div>
                 </div>
@@ -269,14 +269,18 @@ So it will be a one page, website?
                     <p class="footer-header">Explore</p>
                     <a class="footer-item">Home</a><br/>
                     <a class="footer-item">About</a><br/>
-                    <a class="footer-item">Education</a><br/>
-                    <a class="footer-item">Projects</a>
+                    <a class="footer-item">Education</a>
                 </div>
                 <div class="col">
                     <p class="footer-header">Projects</p>
                     <a class="footer-item">skyborne.net</a><br/>
                     <a class="footer-item">parkerprojects.info</a><br/>
                     <a class="footer-item">lugubrious.rip</a>
+                </div>
+                <div class="col">
+                    <p class="footer-header">External Links</p>
+                    <a class="footer-item">linkedin.com/in/colemanning/</a><br/>
+                    <a class="footer-item">https://github.com/RVRX</a><br/>
                 </div>
             </div>
         </div>
