--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 </head>
 <body>
 <!--
-Start with a scroll-spy enabled navbar. (https://getbootstrap.com/docs/4.0/components/scrollspy/)
-Use AOS to have divs appear as the user scrolls.
-So it will be a one page, website?
-    Maybe with exception of the projects, which will have a see more section
+TODO
+    - add more AOS animations, separate current ones, add diversity of animation types.
+    - fix about wrapping.
+    - make cards look better.
+    - fix off center (on mobile) cards.
 -->
 
 <!--Header-->
 <header class="hero">
-
     <!--Navigation Bar-->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top" role="navigation">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-container" aria-controls="navbar-container" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Small).png" height="30px" alt="head shot" class="rounded-circle"></a>
+            <a href="#" class="navbar-brand"><img src="images/prof-pic_HighRez%20(Mini30px).png" height="30px" alt="head shot" class="rounded-circle"></a>
             <div class="navbar-collapse collapse" id="navbar-container"> <!--Collapsable Section-->
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#about-anchorpoint">About</a></li>
@@ -55,59 +55,7 @@ So it will be a one page, website?
     <div class="hero-center" id="name">
         <h1 class="animate__animated animate__fadeIn animate__slower">Cole Manning</h1>
     </div>
-
 </header>
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
-<!--    <div class="container-fluid">-->
-
-<!--            <ul class="navbar-nav">-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link active" aria-current="page" href="#">Home</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Features</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Pricing</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--            <span class="navbar-text">-->
-<!--        Navbar text with an inline element-->
-<!--      </span>-->
-
-<!--    </div>-->
-<!--</nav>-->
-
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
-<!--    <div class="container-fluid">-->
-<!--        <a class="navbar-brand" href="#">Expand at lg</a>-->
-<!--        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--            <span class="navbar-toggler-icon"></span>-->
-<!--        </button>-->
-
-<!--        <div class="collapse navbar-collapse" id="navbarsExample05">-->
-<!--            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">-->
-<!--                <li class="nav-item active">-->
-<!--                    <a class="nav-link" aria-current="page" href="#">Home</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Link</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item dropdown">-->
-<!--                    <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-expanded="false">Dropdown</a>-->
-<!--                    <ul class="dropdown-menu" aria-labelledby="dropdown05">-->
-<!--                        <li><a class="dropdown-item" href="#">Action</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Another action</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</nav>-->
 
 <!--Main Content-->
 <main role="main" class="container-fluid">
