fixed about section responsiveness

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <!--
 TODO
     - add more AOS animations, separate current ones, add diversity of animation types.
-    - fix about wrapping.
     - make cards look better.
     - fix off center (on mobile) cards.
+    - optimize libraries/scripts
 -->
 
 <!--Header-->
@@ -59,10 +59,11 @@ TODO
 
 <!--Main Content-->
 <main role="main" class="container-fluid">
+
     <span id="about-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
-            <div class="col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-lg-5"></div>
+            <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
                 <h2 id="about">About</h2>
                 <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
