--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ TODO
     - make cards look better.
     - fix off center (on mobile) cards.
     - optimize libraries/scripts
+    - make footer links into actual links
+    - add new content to cards, add new cards, remove dud cards
     *
     - "Is there a way to open the site up with photo & bio. Insert name in header instead of about"
     - "grey sub headings hard to read"
@@ -60,7 +62,7 @@ TODO
         <p class="animate__animated animate__backInUp secondary">Subheading</p>
     </div>
     <a href="#about-anchorpoint">
-        <div class="hero-bottom animate__animated animate__shakeY animate__repeat-3 animate__slower">
+        <div class="hero-bottom animate__animated  animate__backInUp">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-double-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
                 <path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
@@ -259,7 +261,12 @@ TODO
                 </button>
             </div>
             <div class="modal-body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Blandit libero volutpat sed cras ornare arcu dui. Ullamcorper malesuada proin libero nunc consequat interdum varius. Eu tincidunt tortor aliquam nulla. Nam at lectus urna duis convallis convallis tellus id interdum. Nisl nunc mi ipsum faucibus. Sit amet cursus sit amet dictum sit amet. Sed nisi lacus sed viverra tellus in hac habitasse platea. Pretium fusce id velit ut. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Nunc mi ipsum faucibus vitae. Ipsum dolor sit amet consectetur adipiscing elit duis. Enim lobortis scelerisque fermentum dui faucibus in ornare. Sed risus pretium quam vulputate dignissim suspendisse in est ante.
+                <p>Starting with a free Weebly site in 2014, the Skyborne website was meant as a platform for me and my friend&rsquo;s gaming community to advertise to prospective members and give them a contact form to apply to, along with being (admittedly more so) just to show off that we had a site and a clan logo.</p>
+                <p>At some point in early 2016 I grew tired of editing the CSS to hide the Weebly watermarks every time they updated their templates, and decided to move the site (via my patented right-click &gt; view-source &gt; ctrl+c method) to a custom host and registered the skyborne.net domain (<a href="https://web.archive.org/web/20160206033041/http:/skyborne.net/">Internet archive view</a>).</p>
+                <p>I <a href="https://web.archive.org/web/20160206033032/http:/www.forum.skyborne.net/">added a forum to the site</a>, using the <a href="https://www.simplemachines.org/">Simple Machine Forum</a> (SMF) software. If I recall correctly, this was my first introduction to SQL databases visa vie the SMF backend. I sleuthed around for some time until I found the theme that Guns of Icarus (the game from which our clan hails) had modified to make their SMF forum.</p>
+                <p>In 2017 I decided to code the site anew, getting away from the Weebly past, and came up with <a href="https://web.archive.org/web/20170411135002/http:/skyborne.net/">this</a> (some icons are missing). I introduced myself to PHP while trying to get the site to automatically propagate our VODs from a databased location (not sure if I ever accomplished that idea in full).</p>
+                <p>Sometime after that, in around 2018-2019, I cleaned that design up, and left just the logo and buttons (Currently don&rsquo;t have an archived view to show). Around this time, the forum died off from a lack of reason to use it with the advent of Discord messaging, and more active use of our Mumble VOIP server.</p>
+                <p>In 2020, the site evolved to it&rsquo;s current stage. This was my first fully responsive website (I finally learned how to use bootstrap for not just pretty form fields). A lot of the knowledge I gained from my Senior Project site, parkerprojects.info (now <a href="https://rvrx.github.io/ParkerProjects/">rvrx.github.io/ParkerProjects</a>) helped me realize this site in full. Namely responsiveness and columns from Bootstrap and simple animations from the Animate.css library. New to this site, and my inspiration to update it, was the addition of our newly commissioned clan avatar, which we all found very entertaining, so of course we needed to show it off on our site to all 25 of the still active Guns of Icarus players.</p>
             </div>
         </div>
     </div>
@@ -274,7 +281,7 @@ TODO
                 </button>
             </div>
             <div class="modal-body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam. Blandit libero volutpat sed cras ornare arcu dui. Ullamcorper malesuada proin libero nunc consequat interdum varius. Eu tincidunt tortor aliquam nulla. Nam at lectus urna duis convallis convallis tellus id interdum. Nisl nunc mi ipsum faucibus. Sit amet cursus sit amet dictum sit amet. Sed nisi lacus sed viverra tellus in hac habitasse platea. Pretium fusce id velit ut. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Nunc mi ipsum faucibus vitae. Ipsum dolor sit amet consectetur adipiscing elit duis. Enim lobortis scelerisque fermentum dui faucibus in ornare. Sed risus pretium quam vulputate dignissim suspendisse in est ante.
+                <p>Parker Projects was the product of my Senior Project at my high school, <a href="https://www.theparkerschool.org/">Parker</a>. Originally live at parkerprojects.info, a demo of the site can now be found at <a href="https://rvrx.github.io/ParkerProjects/">rvrx.github.io/ParkerProjects</a> In short, It&rsquo;s a web application that dynamically shows user pages based on a database filled with user submitted info (Info about my peer&rsquo;s senior projects). By nature of being a school project, you&rsquo;ll find plenty of documentation on my project on its <a href="https://rvrx.github.io/ParkerProjects/about.html">about page</a>. For anyone interested in seeing the final implementation, live with my actual peer&rsquo;s projects, it is still live and hidden away on the WWW, so let me know. Same goes for my project exhibition.</p>
             </div>
         </div>
     </div>
