--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@ TODO
 
 <!--Main Content-->
 <main role="main" class="container-fluid mt-5">
-
     <span id="about-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="about-container">
         <div class="row">
@@ -91,8 +90,8 @@ TODO
         <hr/>
     </div>
     <span id="xp-anchorpoint"></span>
-    <div class="container" data-aos="fade-up" data-aos-duration="1000" id="xp-container">
-        <h2 id="xp">Job Experience</h2>
+    <div class="container" id="xp-container" data-aos="fade-right">
+        <h2 id="xp" data-aos="fade-up">Job Experience</h2>
 
         <div class="container item my-5">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
@@ -136,31 +135,31 @@ TODO
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="projects-container">
         <h2 id="projects">Independent Projects</h2>
 
+        <!--Website Cards-->
         <div class="container item my-lg-5">
-            <h3>Websites</h3>
+            <h3 data-aos="fade-up">Websites</h3>
             <div class="row">
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
                     <img src="images/projects/skyborne/Screenshot_2020-08-06%20The%20Skyborne1.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                     <div class="card-body">
-                        <h5 class="card-title">Skyborne.net</h5>
+                        <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net</a></h5>
                         <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
                         <p class="card-text">A Website for The Skyborne, a Guns of Icarus Online clan.</p>
                         <a class="btn btn-primary" data-toggle="modal" data-target="#skyborneModal">Details</a>
                     </div>
                 </div>
 
-
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
                     <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Parkerprojects.info</h5>
+                        <h5 class="card-title"><a href="https://github.com/RVRX/ParkerProjects" class="no-style">Parkerprojects.info</a></h5>
                         <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
                         <p class="card-text">A web app to display my peer's Senior Projects.</p>
                         <a class="btn btn-primary" data-toggle="modal" data-target="#parkerprojectsModal">Details</a>
                     </div>
                 </div>
 
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
                     <div class="card-body">
                         <h5 class="card-title">Title</h5>
@@ -170,7 +169,7 @@ TODO
                     </div>
                 </div>
 
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card m-2" style="width: 18rem;" data-aos="zoom-in"`>
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
                     <div class="card-body">
                         <h5 class="card-title">Title</h5>
@@ -182,11 +181,12 @@ TODO
                 </div>
             </div>
         </div>
+        <!--Other Languages Cards-->
         <div class="container item my-lg-5">
             <h3>Other Languages</h3>
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="card m-2" style="width: 18rem;">
+                    <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Mumble Image Resizer</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Java | 2020</h6>
@@ -197,7 +197,7 @@ TODO
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="card m-2" style="width: 18rem;">
+                    <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
                         <div class="card-body">
                             <h5 class="card-title">Computronics tape-util</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Lua (Computercraft) | 2020</h6>
