--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ TODO
         <div class="row">
             <div class="col" id="head-shot-col"><img src="images/prof-pic_HighRez.png" alt="Head Shot of Cole." class="img-fluid rounded-lg px-lg-5"></div>
             <div class="col">
-                <h2 id="about">About</h2>
+                <h2 id="about" data-aos="fade-left">About</h2>
                 <p>I'm a 20-year-old College student currently attending Worcester Polytechnic Institute (Class of ’23), majoring in Computer science and pursuing a Management Information Systems (MIS) minor. To see the classes I’ve taken thus far at WPI, <a href="#todo">click here</a>. I’ve been working on websites since 2015, and have experience with both coding from scratch and popular web builders such as Weebly and Squarespace. Outside of web development, I also have experience in C and Java.</p>
                 <p id="socials" class="text-center">
                     <a href="https://github.com/RVRX"><i class="fab fa-github mx-sm-3"></i></a>
@@ -90,20 +90,20 @@ TODO
         <hr/>
     </div>
     <span id="xp-anchorpoint"></span>
-    <div class="container" id="xp-container" data-aos="fade-right">
+    <div class="container" id="xp-container">
         <h2 id="xp" data-aos="fade-up">Job Experience</h2>
 
-        <div class="container item my-5">
+        <div class="container item my-5" data-aos="fade-right">
             <h3>Computer Lab Assistant, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Oct 2019 - Present</h4>
             <p>Mainly tasked with setting up and troubleshooting newly purchased laptops and PCs (imaging, adding to domain, installing necessary drivers and software). Assisting professors and other employees with their machines and any technical issues or questions they might have about WPI equipment.</p>
         </div>
-        <div class="container item my-5">
+        <div class="container item my-5" data-aos="fade-left">
             <h3>Library Page, <span class="secondary">Hazen Memorial Library</span></h3>
             <h4>Sep 2015 - Aug 2019</h4>
             <p>Primarily tasked with book shelving, but also carried out general library duties, including assisting patrons with library computers and any questions they might have, library cleanup, weeding of old books, pulling holds, and other miscellaneous tasks.</p>
         </div>
-        <div class="container item my-5">
+        <div class="container item my-5" data-aos="fade-right">
             <h3>Summer IT Assistant, <span class="secondary">Francis W. Parker Charter Essential School</span></h3>
             <h4>Jun 2017 - Aug 2019</h4>
             <p>General IT support to teachers, and maintenance tasks including, running new Ethernet cable, replacing and re-imaging hard drives, and cleaning & troubleshooting of school computers, printers, and miscellaneous technology. This position was held full time during summer break, along with occasional weekdays during the school year for when the IT team needed a hand.</p>
@@ -114,12 +114,12 @@ TODO
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
         <h2 id="edu">Education</h2>
 
-        <div class="container item my-lg-5">
+        <div class="container item my-lg-5" data-aos="fade-left">
             <h3>Computer Science, <span class="secondary">Worcester Polytechnic Institute</span></h3>
             <h4>Class of 2023</h4>
             <p>GPA of 3.60 in Freshman year. Expecting to Minor in Management Information Systems (MIS).</p>
         </div>
-        <div class="container item my-5">
+        <div class="container item my-5" data-aos="fade-right">
             <h3>High School Diploma, <span class="secondary">Francis Parker Charter Essential School</span></h3>
             <h4>Class of 2019</h4>
             <p>Independent Senior Project was done on Web Application Development. The project and its details can be found at rvrx.github.io/ParkerProjects. Project written in HTML, CSS, and PHP, making use of the Slim framework and Twig template engine.
@@ -140,7 +140,7 @@ TODO
             <h3 data-aos="fade-up">Websites</h3>
             <div class="row">
                 <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
-                    <img src="images/projects/skyborne/Screenshot_2020-08-06%20The%20Skyborne1.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
+                    <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                     <div class="card-body">
                         <h5 class="card-title"><a href="https://skyborne.net" class="no-style">Skyborne.net</a></h5>
                         <h6 class="card-subtitle text-muted mb-2">2015 - Present</h6>
@@ -213,7 +213,7 @@ TODO
 
 <!--Footer-->
 <footer>
-    <div class="container-fluid pb-4 pt-3">
+    <div class="container-fluid pb-4 pt-3" data-aos="fade-down">
         <div class="container">
             <div class="row">
                 <div class="col">
