activated footer links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 <body>
 <!--
 TODO
-    - add more AOS animations, separate current ones, add diversity of animation types.
     - make cards look better.
-    - fix off center (on mobile) cards.
     - optimize libraries/scripts
     - make footer links into actual links
     - add new content to cards, add new cards, remove dud cards
@@ -160,7 +158,7 @@ TODO
                 </div>
 
                 <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="23%" y="50%" fill="#dee2e6" dy=".3em">More Coming Soon...</text></svg>
                     <div class="card-body">
                         <h5 class="card-title">Title</h5>
                         <h6 class="card-subtitle text-muted mb-2">date</h6>
@@ -213,7 +211,7 @@ TODO
 
 <!--Footer-->
 <footer>
-    <div class="container-fluid pb-4 pt-3" data-aos="fade-down">
+    <div class="container-fluid pb-4 pt-3">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -226,21 +224,21 @@ TODO
                 </div>
                 <div class="col">
                     <p class="footer-header">Explore</p>
-                    <a class="footer-item">Home</a><br/>
-                    <a class="footer-item">About</a><br/>
-                    <a class="footer-item">Education</a>
+                    <a class="footer-item" href="#">Home</a><br/>
+                    <a class="footer-item" href="#about-anchorpoint">About</a><br/>
+                    <a class="footer-item" href="#edu-anchorpoint">Education</a>
                 </div>
                 <div class="col">
                     <p class="footer-header">Projects</p>
-                    <a class="footer-item">skyborne.net</a><br/>
-                    <a class="footer-item">parkerprojects.info</a><br/>
-                    <a class="footer-item">lugubrious.rip</a>
+                    <a class="footer-item" href="https://www.skyborne.net">skyborne.net</a><br/>
+                    <a class="footer-item" href="https://rvrx.github.io/ParkerProjects">parkerprojects.info</a><br/>
+                    <a class="footer-item" href="https://lugubrious.rip">lugubrious.rip</a>
                 </div>
                 <div class="col">
                     <p class="footer-header">External Links</p>
-                    <a class="footer-item">linkedin.com/in/colemanning/</a><br/>
-                    <a class="footer-item">https://github.com/RVRX</a><br/>
-                    <a class="footer-item">resume download</a><br/>
+                    <a class="footer-item" href="https://linkedin.com/in/colemanning">linkedin.com/in/colemanning/</a><br/>
+                    <a class="footer-item" href="https://github.com/RVRX">https://github.com/RVRX</a><br/>
+                    <a class="footer-item" href="docs/BaseResume.docx">resume download</a><br/>
                 </div>
             </div>
         </div>
