--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ TODO
     - optimize libraries/scripts
     - make footer links into actual links
     - add new content to cards, add new cards, remove dud cards
+    - cards in same row become same size...
     *
     - "Is there a way to open the site up with photo & bio. Insert name in header instead of about"
     - "grey sub headings hard to read"
@@ -87,6 +88,7 @@ TODO
         </div>
         <hr/>
     </div>
+    <!--Experience-->
     <span id="xp-anchorpoint"></span>
     <div class="container" id="xp-container">
         <h2 id="xp" data-aos="fade-up">Job Experience</h2>
@@ -108,6 +110,7 @@ TODO
         </div>
         <hr/>
     </div>
+    <!--Education-->
     <span id="edu-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="edu-container">
         <h2 id="edu">Education</h2>
@@ -129,6 +132,7 @@ TODO
 
         <hr/>
     </div>
+    <!--Projects-->
     <span id="projects-anchorpoint"></span>
     <div class="container" data-aos="fade-up" data-aos-duration="1000" id="projects-container">
         <h2 id="projects">Independent Projects</h2>
@@ -137,6 +141,17 @@ TODO
         <div class="container item my-lg-5">
             <h3 data-aos="fade-up">Websites</h3>
             <div class="row">
+                <!--ParkerProjects Card-->
+                <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
+                    <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><a href="https://github.com/RVRX/ParkerProjects" class="no-style">Parkerprojects.info</a></h5>
+                        <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
+                        <p class="card-text">A web app to display my peer's Senior Projects.</p>
+                        <a class="btn btn-primary" data-toggle="modal" data-target="#parkerprojectsModal">Details</a>
+                    </div>
+                </div>
+                <!--Skyborne.net Card-->
                 <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
                     <img src="images/projects/skyborne/SkyborneOverviewImage.png" class="card-img-top rounded-top" alt="Screenshot of Skyborne.net">
                     <div class="card-body">
@@ -147,27 +162,19 @@ TODO
                     </div>
                 </div>
 
+                <!--Filler Card-->
                 <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
-                    <img src="images/projects/parkerprojects/Screenshot_2020-08-06%20Parker%20Projects(1).png" class="card-img-top" alt="...">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="201" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="286px" height="201" fill="#868e96"></rect><text x="23%" y="50%" fill="#dee2e6" dy=".3em">More Coming Soon...</text></svg>
                     <div class="card-body">
-                        <h5 class="card-title"><a href="https://github.com/RVRX/ParkerProjects" class="no-style">Parkerprojects.info</a></h5>
-                        <h6 class="card-subtitle text-muted mb-2">2018 - 2019 (live on github)</h6>
-                        <p class="card-text">A web app to display my peer's Senior Projects.</p>
-                        <a class="btn btn-primary" data-toggle="modal" data-target="#parkerprojectsModal">Details</a>
+                        <h5 class="card-title">More Projects Coming Soon</h5>
+<!--                        <h6 class="card-subtitle text-muted mb-2">date</h6>-->
+<!--                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+<!--                        <a class="btn btn-primary" data-toggle="modal" data-target="#fillerModal">Details</a>-->
                     </div>
                 </div>
 
+                <!--Filler Card-->
                 <div class="card m-2" style="width: 18rem;" data-aos="zoom-in">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="23%" y="50%" fill="#dee2e6" dy=".3em">More Coming Soon...</text></svg>
-                    <div class="card-body">
-                        <h5 class="card-title">Title</h5>
-                        <h6 class="card-subtitle text-muted mb-2">date</h6>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a class="btn btn-primary" data-toggle="modal" data-target="#fillerModal">Details</a>
-                    </div>
-                </div>
-
-                <div class="card m-2" style="width: 18rem;" data-aos="zoom-in"`>
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" role="img" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Coming Soon...</text></svg>
                     <div class="card-body">
                         <h5 class="card-title">Title</h5>
